//------------------------------------------------------------------------------
// protobuf specification for flowsim
//------------------------------------------------------------------------------

syntax = "proto3";

import "types.proto";
import "fwlog.proto";
package internal;
option go_package="halproto";

// Simulator service definition
service FWLogSim {
  rpc LogFlow (LogFlowRequestMsg) returns (LogFlowResponseMsg) {}
}

message LogFlowRequestMsg {
  repeated fwlog.FWEvent request = 1;
}

message LogFlowResponseMsg {
  repeated LogFlowResponse response = 1;
}

message LogFlowResponse {
  types.ApiStatus api_status  = 1;    // API status code
}
